--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
     width: 100%;
     margin: 0px auto;
     max-width: 1180px; /* ⚠️ ОБРАТИ ВНИМАНИЕ - максимальная ширина увеличилась на размер отступов, чтобы ширина контента оставалась корректной */
-    /* 📍 Свойство для внутрених отступов */
+   padding: 0px 20px; /* 📍 Свойство для внутрених отступов */
 }
 
 body {
     font-family: "Inter", sans-serif; 
     color: #303030;
+    min-width: 375px;
     /* 📍 Минимальная ширина */ 
 }
 
@@ -142,6 +143,7 @@ select:hover,
 
 form {
     margin-bottom: 40px;
+    gap: 10px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
 }
 
@@ -210,23 +212,25 @@ footer {
 @media screen and (max-width: 1200px) {
     .main-section {
         margin: 40px;
-        display: flex;
-        flex-direction: column;
-        max-width: 690px;
+        flex-direction: row-reverse;
+        width: 690px;
+        padding-bottom: 100px 60px;
         /* 📍 Свойства для установки минимальной высоты секции по размеру контента и нижнего внутреннего отступа */
     }
 
     .main-section .wrapper {
         margin: 60 0 70;
+        gap: 60px;
         /* 📍 Свойства для расположения элементов и отступа между ними */
     }
 
     .main-image {
-        max-width: 690px;
+        max-width: 100%;
         /* 📍 Максимальная ширина для главного изображения в % */
     }
 
     .text-wrapper {
+        max-width: 560px;
         /* 📍 Максимальная ширина для блока с текстом */
     }
 
@@ -240,6 +244,7 @@ footer {
 
 @media screen and (max-width: 768px) {
     .info-wrapper {
+        gap: 60px;
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
     }
 }
@@ -247,19 +252,23 @@ footer {
 /* Стили для адаптива под мобильные устройства */
 @media screen and (max-width: 576px) {
     .main-section {
+        padding: 30px 0px 60px;
         /* 📍 Внутренние отступы сверху и снизу */
     }
 
     .main-section .wrapper {
+        gap: 40px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 
     .main-title {
+        font-size: 36px;
         /* 📍 Размер шрифта */
     }
 
     .about-section .wrapper,
     .info-wrapper {
+        gap: 50px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 }
