--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ footer {
         margin: 40px;
         flex-direction: row-reverse;
         width: 690px;
-        padding-bottom: 100px 60px;
+        padding-bottom: 100px;
         /* 📍 Свойства для установки минимальной высоты секции по размеру контента и нижнего внутреннего отступа */
     }
 
